docker_station/draftkubernates/frontDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stationfront-deployment
spec:
  # A deployment's specification really only 
  # has a few useful options
  
  # 1. How many copies of each pod do we want?
  replicas: 2

  # 2. Which pods are managed by this deployment?
  selector:
    # This must match the labels we set on the pod!
    matchLabels:
      app:  stationfrontpod
  
  # This template field is a regular pod configuration 
  # nested inside the deployment spec
  template:
    metadata:
      # Set labels on the pod.
      # This is used in the deployment selector.
      labels:
        app: stationfrontpod
    spec:
      volumes:
      - name: logstationfrontnginx 
        emptyDir: {}
      - name: logstationfronttomcat
        emptyDir: {}
      containers:
        - name: tomcat-front-nginx
          image: kagzouli/station-front-nginx:1.0.0
          volumeMounts:
          - name: logstationfrontnginx  
            mountPath: /var/log/nginx/
        - name: tomcat-front-tomcat
          image: kagzouli/station-front-tomcat:1.0.0
          volumeMounts:
          - name: logstationfronttomcat 
            mountPath: /usr/local/tomcat/logs
