docker_station/draftkubernates/frontService.yaml
apiVersion: v1
kind: Service
metadata:
  name: stationfrontservice 
  labels:
    run: stationfront 
spec:
  ports:
  - port: 8080 
    nodePort: 32600
    targetPort: 8080 
    protocol: TCP
  selector:
    run: stationfront
  type: LoadBalancer
  externalIPs:
  - 51.254.36.120
